test/unit-tests/errors/less-than-match-error.spec.d.ts
export declare class LessThanMatchErrorTests {
    shouldBeLessThanMessage(actualValue: number, upperLimit: number): void;
    shouldNotBeLessThanMessage(actualValue: number, upperLimit: number): void;
    shouldSetActualValueToGivenValue(actualValue: number): void;
    shouldSetExpectedValueToLessThanUpperLimit(upperLimit: number): void;
    shouldSetExpectedValueToNotLessThanUpperLimit(upperLimit: number): void;
}
